# MusicMaster

./: .gitattributes  .gitignore  NOTICE  README.en.md  README.md  paths.local.json.example  pyproject.toml  start.sh  启动.bat
docs/: 前端开发文档.md  合并开发日志.md  架构流程图.md
examples/: README.md  twinkle.jianpu
musicmaster/: __init__.py  _paths.py  cli.py
musicmaster/convert/: __init__.py  convert.py
musicmaster/core/: __init__.py  cli.py  contracts.py  correct.py  render.py  separate.py  transcribe.py
musicmaster/core/schemas/: correct_params.schema.json  f0.schema.json  target.schema.json  target_f0_frames.schema.json
musicmaster/separate/: __init__.py  pipeline.py
musicmaster/transcribe/: __init__.py  autopilot.py  confidence.py  entry.py  piano_bytedance.py  quality.py  transcribe2.py
musicmaster/transcribe/tools/: __init__.py  compare.py  normalize_notes.py  show.py
musicmaster/vocal/: __init__.py  config.py  correct.py  pipeline.py  voice.py
musicmaster/vocal/diffpitcher_scripts/: run_full.py  run_qt4.py
musicmaster/web/: __init__.py  jobs.py  runners.py  server.py
musicmaster/web/static/: index.html
musicmaster/web/static/fonts/: README.txt
musicmaster/web/static/js/: api.js  convert.js  separate.js  transcribe.js  vocal.js
requirements/: requirements-core.txt  requirements-sep.txt  requirements-vocal.txt
scripts/: setup_core.py  setup_sep.py  setup_vocal.py
tests/: conftest.py  test_musicmaster.py
